.openshift/network-policies/allow-from-ingress-namespace.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress-namespace
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy: global
  podSelector: {}
  policyTypes:
  - Ingress
