.openshift/network-policies/allow-from-namespace.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-another-namespace
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabel:
          project: another
  policyTypes:
  - Ingress
