.openshift/network-policies/allow-ingress-from-colorpad.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-colorpad
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabel:
          project: colorpad
  policyTypes:
  - Ingress
