.openshift/network-policies/allow-ingress-green-colorpad.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-green-colorpad
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: colorpad
  podSelector:
    matchLabels:
      color: green
  policyTypes:
  - Ingress
